# simpleco2

./: .gitignore
HITRAN/CO2_Q/: molparam.txt  q10.txt  q11.txt  q12.txt  q120.txt  q121.txt  q122.txt  q13.txt  q14.txt  q15.txt  q7-q122-description.txt  q8.txt  q9.txt
HITRAN/data_description/: CO2_rwfmt_ISO-0-12_wl-12-18-mum.bib  CO2_rwfmt_ISO-0-12_wl-12-18-mum.txt
doc/latex/: latexmk.sh  modtran.md  radrans.tex  radtrans.bib  radtrans.tex
doc/latex/chapter/: radtrans_01.tex  radtrans_02.tex  radtrans_03.tex  radtrans_a01.tex  radtrans_a02.tex  radtrans_a03.tex  radtrans_a04.tex  radtrans_a05.tex  radtrans_a06.tex
doc/sphinx/: README.md  create_sphinx_project.sh  run_apidoc.sh
doc/sphinx/rust_py/source/: conf.py  contents.rst  index.rst
doc/sphinx/rust_py/source/plugins/: numfig.py
radinput/: README.md  create_npy_files.py  parameter_input.py  postprocessing.py  postprocessing_plot_spectrum.py  preprocessing_and_run.py
rust/: Cargo.toml  install_rust.md  make_docs.sh
rust/src/: lib.rs
rust/src/pyext/: pylib.rs
rust/src/spectrum/: interpolator.rs  ioutil.rs  mod.rs  parameter.rs  profiles.rs  rdutil.rs  resultdata.rs  spectralline.rs  spectrum.rs  spectrum_F.rs
rust/src/util/: hdf5_util.rs  json_util.rs  mod.rs  read_hitran.rs
rust_py/: Cargo.toml  build.rs  config
rust_py/src/: lib.rs
