[package]
name = "radtrans"
version = "0.1.0"
authors = ["wester <rolf.wester@mailbox.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
ndarray = "0.13"
serde_json = "1.0"
dirs = "1.0.5"
rayon = "1.0.3"
ndarray-parallel = "0.9.0"
clap = "2.33.0"
itertools-num = "0.1.1"
ndarray-npy =  { version = "0.5", default-features = false }

[dependencies.pyo3]
version = "0.7.0"
features = ["extension-module"]

[dependencies.numpy]
version = ""

[lib]
name = "radtrans"
path = "src/lib.rs"

[[bin]]
name = "radtrans"
path = "src/bin/main.rs"

