[package]
name = "pyradtrans"
version = "0.1.0"
authors = ["wester <rolf.wester@mailbox.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
numpy = "0.7.0"
ndarray = "0.13"
radtrans = { path = "../rust" }
serde_json = "1.0"
dirs = "1.0.5"
rayon = "1.0.3"
ndarray-parallel = "0.9.0"
clap = "2.33.0"
itertools-num = "0.1.1"
ndarray-npy =  { version = "0.5.0", default-features = false }

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]

[lib]
name = "pyradtrans"
path = "src/lib.rs"
crate-type = ["cdylib"]
